# DisplayRouter

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  display_router.db  docker-compose.yml  pyproject.toml  pytest.ini  requirements-display.txt  requirements.txt
.github/workflows/: ci.yml  docker.yml  pages.yml  release.yml
admin/: api.py  main.py
admin/static/: admin.css  admin.js
admin/templates/: index.html
admin/ui/: index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
config/: display.json  display.toml  router.json  router.toml
display/: client.py  command_executor.py  config.py  heartbeat.py  main.py  render.py  rgbmatrix_renderer.py  sample_commands.json  sample_pixels.json  sim_playground.py  sim_renderer.py  sim_server.py  sim_ui.py  state.py  transitions.py
docs/: api_contracts.md  asyncapi.yaml  data_models.md  implementation_plan.md  milestones.md  openapi.yaml
docs/planning/: ApiContractDraft.md  CodexInitialUpdatePlan.md  ProjectInventory.md  SpecUpdateFileMap.md  SpecUpdates.md
docs/site/: index.html
rgbmatrix/: __init__.py  core.py  graphics.py
router/: cli.py  main.py
router/api/: admin.py  client.py  display.py
router/core/: config.py  (+2 more)
scripts/: bootstrap_display.sh  display.service  install_display.sh  run_display_sim.sh  run_router.sh  with_local_config.sh
shared/: schemas.py
tests/: conftest.py  test_carousel.py  test_display_renderer.py  test_health.py  test_integration.py  test_replay.py  test_rgbmatrix_api.py  test_rules.py  test_templates.py  test_transitions.py
(+19 files in other folders)
