[build-system]
requires = ["setuptools>=68", "setuptools-scm[toml]>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "display-router"
description = "Router/formatter system for RGB LED matrix displays"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [
  { name = "Display Router Team" }
]
dynamic = ["version"]
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "sqlmodel>=0.0.21",
  "jinja2>=3.1.4",
  "python-dotenv>=1.0.1",
  "pytest>=8.2.0",
  "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://example.com"

[project.scripts]
display-router = "router.cli:main"

[tool.setuptools.packages.find]
include = ["router*", "shared*", "display*", "admin*", "rgbmatrix*"]

[tool.setuptools.package-data]
admin = ["templates/*.html", "static/*.css", "static/*.js"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
